fix scrolling
before overflow was always hidden, breaking long pages.

now the header is fixed and the content below is always allowed to scroll when the content overflows

--- a/dispatch/static/manager/src/styles/components/item_list.scss
+++ b/dispatch/static/manager/src/styles/components/item_list.scss
@@ -14,7 +14,7 @@
 // Component: ItemListTable
 .c-item-list__table {
   flex: 1;
-  overflow: scroll;
+  // overflow: scroll;
 
   ul {
     display: table;
